2009-04-10  Ross Burton  <ross@linux.intel.com>

	* configure.in:
	* NEWS:
	Version 2.26.1.

2009-04-07  Ross Burton  <ross@linux.intel.com>

	* libjuicer/sj-metadata-gvfs.c:
	Actually use the TrackData we created (#578286)

2009-04-06  Ross Burton  <ross@linux.intel.com>

	* configure.in:
	Require a recent libmusicbrainz3.
	
	* libjuicer/sj-metadata-musicbrainz3.c:
	Read the track artist for each track, not the release
	artist (#576574).  Thanks Jonathan Matthew.
	
2009-04-06  Hubert Figuiere  <hub@figuiere.net>

	* libjuicer/sj-metadata-musicbrainz3.c (mb_list_albums): 
	Make sure release is not NULL. (Close: #575820)

2009-04-06  Ross Burton  <ross@linux.intel.com>

	* libjuicer/sj-metadata.c:
	Check that the date isn't NULL when parsing (#578060).

2009-03-17  Ross Burton  <ross@linux.intel.com>

	* configure.in:
	* NEWS:
	Version 2.26.0

2009-03-09  Ross Burton  <ross@linux.intel.com>

	* configure.in:
	* NEWS:
	Version 2.25.92.

2009-02-24  Ross Burton  <ross@linux.intel.com>

	* src/sj-main.c:
	Set the PulseAudio role hint.

2009-02-19  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* libjuicer/Makefile.am:
	* libjuicer/sj-metadata-getter.c (lookup_cd):
	Allow building with the old libmusicbrainz as long
	as libmusicbrainz3 is available (Closes: #572383)

2009-02-17  Ross Burton  <ross@linux.intel.com>

	* src/egg-play-preview.c:
	Remove deprecated GTK+ calls (#572087)

2009-02-13  Ross Burton  <ross@linux.intel.com>

	* configure.in:
	* NEWS:
	Version 2.25.3.

2009-02-13  Ross Burton  <ross@linux.intel.com>

	* libjuicer/sj-extractor.c:
	Handle comma separated genres.

2009-02-10  Ross Burton  <ross@linux.intel.com>

	* configure.in:
	Look for libcanberra-gtk.

	* src/sj-prefs.c:
	Use canberra to play a sound when the rip is complete (#469258).
	
2009-02-10  Ross Burton  <ross@linux.intel.com>

	* src/sj-prefs.c:
	Handle the file or path pattern combo containing a custom
	combo (#339089).

2009-02-10  Ross Burton  <ross@linux.intel.com>
